Bug 158123 - a double checker is not taken into account
Summary: a double checker is not taken into account
Status: RESOLVED FIXED
Alias: None
Product: klines
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Suzdalev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-20 20:29 UTC by Stephan Kulow
Modified: 2008-03-11 11:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Kulow 2008-02-20 20:29:59 UTC
Version:           1.5 (using 4.00.60 (KDE 4.0.60 >= 20080129), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-8-default

this bug report is really from my wife but she does not want to open a bugzilla account.

If you have 4 in one column and 4 in one row, so that a 5th stone placed to continue both of them, only the row is erased and you only get points for 5. While you should get points for 9
Comment 1 Dmitry Suzdalev 2008-02-20 23:44:51 UTC
Okay, will look into that :)
Didn't try to reproduce yet, but I beleive you're right - i wrote checking function to check only 5-in-one row (or diagonal)
Comment 2 Dmitry Suzdalev 2008-03-11 11:18:31 UTC
SVN commit 784428 by dimsuz:

Fix a bug coolo's wife found :)
Remove both lines if they form a "corner", e.g. like this:

ooooo
o
o
o
o

or any other such occasion :)

BUG: 158123



 M  +1 -1      commondefs.h  
 M  +20 -12    scene.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=784428