Fix a bug coolo's wife found :) Remove both lines if they form a "corner", e.g. like this:

ooooo
o
o
o
o

or any other such occasion :)

BUG: 158123


svn path=/trunk/KDE/kdegames/klines/; revision=784428