commondefs.h
@@ -32,7 +32,7 @@ struct FieldPos
     int y;
     FieldPos( int _x=-1, int _y=-1) : x(_x), y(_y) { }
     bool isValid() const { return (x != -1 && y != -1); }
-    bool operator==(const FieldPos& other)
+    bool operator==(const FieldPos& other) const
     {
         return (x == other.x && y == other.y);
     }
